Menu movil listo

--- a/css/main.css
+++ b/css/main.css
@@ -1,68 +1,77 @@
 /* Welcome to Compass.
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
+ * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+
+@import "compass/reset";
+ */
+/* line 8, ../sass/main.scss */
+.container {
+  background: #00853e;
+}
+/* line 11, ../sass/main.scss */
+.container figure#logo-movil img {
+  width: 156px;
+  height: 40px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+/* MENU-MOBILE */
+/* line 22, ../sass/main.scss */
+#icon-movil img {
+  width: 80px;
+  height: 74px;
+}
+
+/* line 26, ../sass/main.scss */
+#mobile-menu-button {
+  float: right;
+  position: relative;
+  text-align: center;
+}
+
+/* line 31, ../sass/main.scss */
+#mobile-main-menu {
+  display: none;
   padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
 }
 
-/* line 22, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-html {
-  line-height: 1;
-}
-
-/* line 24, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-ol, ul {
-  list-style: none;
-}
-
-/* line 26, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* line 28, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-/* line 30, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-q, blockquote {
-  quotes: none;
-}
-/* line 103, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-/* line 32, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-a img {
-  border: none;
-}
-
-/* line 116, ../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+/* line 36, ../sass/main.scss */
+#mobile-main-menu a {
+  border-top: 1px solid #eee;
+  color: #000;
   display: block;
+  padding: 10px 0;
+  text-align: center;
+  width: 100%;
+}
+
+/* line 44, ../sass/main.scss */
+#mobile-main-menu li {
+  list-style-type: none;
+  margin: 0;
+}
+
+/* line 48, ../sass/main.scss */
+#mobile-main-menu a:hover {
+  background-color: #ebebeb;
+  color: #aaa;
+  text-decoration: none;
+}
+
+/* line 53, ../sass/main.scss */
+.txtmenu {
+  top: 27px;
+  margin-right: 9px;
+  float: right;
+  color: white;
+  font-size: 1.1em;
+  list-style-type: none;
+  position: relative;
+}
+
+/* line 62, ../sass/main.scss */
+.col-xs-9 {
+  padding: 0;
 }
