--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,65 @@
 /* Welcome to Compass.
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+ * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
 @import "compass/reset";
+ */
+.container{
+	background: #00853e;
+	figure#logo-movil{
+		img{
+			width: 156px;
+			height: 40px;
+			display: inline-block;
+			vertical-align: top;
+		}
+	}
+}
+
+
+/* MENU-MOBILE */
+#icon-movil img{
+	width: 80px;
+	height: 74px;
+}
+#mobile-menu-button{
+	float: right;
+	position: relative;
+	text-align: center;
+}
+#mobile-main-menu{
+	display: none;
+	padding: 0;
+}
+
+#mobile-main-menu a{
+	border-top: 1px solid #eee;
+	color: #000;
+	display: block;
+	padding: 10px 0;
+	text-align: center;
+	width: 100%;
+}
+#mobile-main-menu li{
+	list-style-type: none;
+	margin: 0;
+}
+#mobile-main-menu a:hover{
+	background-color: #ebebeb;
+	color: #aaa;
+	text-decoration: none;
+}
+.txtmenu{
+	top: 27px;
+	margin-right: 9px;
+	float: right;
+    color: white;
+    font-size: 1.1em;
+    list-style-type: none;
+    position: relative;
+}
+.col-xs-9{
+	padding: 0;
+
+}
