--- a/sass/filosofia.scss
+++ b/sass/filosofia.scss
@@ -7,50 +7,52 @@ $blanco:#fff;
 
 	#bg{
 		background-image: url('../img/bgimter.png');
-		width: 100%;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
 		height: auto;
+		
 	}
 	#bg2{
 		background-image: url('../img/bg-mision-vision.png');
-		width: 100%;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
 		height: auto;
+		width: 100%;
 	}
 
 
 
 .txt-center{
-		text-align: center;
 		font-size: 1em;
+		text-align: center;
 		h1, h2, h3{
 			font-size: 1.5em;
-
-
+		}
+		p:last-child{
+			margin-bottom: 100px;
 		}
 
 		#linea{
+			border-bottom: 1px solid $verde-claro;
+			height: auto;
 			margin: auto;
 			width: 50%;
-			height: auto;
-			border-bottom: 1px solid $verde-claro;
-			margin-bottom: 0.8em;
+			margin-top: 15px;
+			margin-bottom: 30px;
 		}
 		#linea2{
+			border-bottom: 1px solid $negro;
+			height: auto;
+			margin-bottom: 0.8em;
 			margin: auto;
 			width: 30%;
-			height: auto;
-			border-bottom: 1px solid $negro;
-			margin-bottom: 0.8em;
 		}
 		ol{
-			padding: 0;
-			font-style: italic;
 			font-size: 16px;
+			font-style: italic;
+			padding: 0;
 			li{
 				list-style-type: none;
 
@@ -68,9 +70,9 @@ $blanco:#fff;
 		}
 		.txt-center{
 			#linea{
+				border-bottom: 2px solid $verde-claro;
 				margin-left: 0;
 				width: 20%;
-				border-bottom: 2px solid $verde-claro;
 			}
 			p{
 				text-align: left;
