--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -6,30 +6,41 @@
   background-size: cover;
   height: auto;
 }
-/* line 7, ../sass/portafolio.scss */
-#bg h1 {
-  text-align: center;
+
+/* line 8, ../sass/portafolio.scss */
+h1 {
   font-size: 1.5em;
+  text-align: center;
+  margin-top: 250px;
 }
 
-/* line 12, ../sass/portafolio.scss */
-.thumbnail {
-  padding: 0;
-  margin-bottom: 0;
+/* line 14, ../sass/portafolio.scss */
+#linea2 {
+  border-bottom: 1px solid black;
+  width: 30%;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
-/* line 16, ../sass/portafolio.scss */
+/* line 20, ../sass/portafolio.scss */
 .thumbnails {
-  list-style-type: none;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  width: 50%;
-  max-width: 250px;
+  text-align: center;
+  width: 80%;
+}
+/* line 25, ../sass/portafolio.scss */
+.thumbnails .span3 {
+  display: inline-block;
+}
+/* line 28, ../sass/portafolio.scss */
+.thumbnails .thumbnail {
+  border: none;
+  display: inline;
+  padding: 0;
 }
 
-@media screen and (min-width: 768px) {
-  /* line 26, ../sass/portafolio.scss */
-  .portafolio h1 {
-    margin-top: 200px;
-  }
+/* line 35, ../sass/portafolio.scss */
+#lightbox img {
+  width: 100%;
 }
