--- a/css/sistemas-ssfi.css
+++ b/css/sistemas-ssfi.css
@@ -4,21 +4,21 @@ article .sist-solares {
 }
 /* line 12, ../sass/sistemas-ssfi.scss */
 article .sist-solares figure img {
-  width: 100%;
+  height: auto;
   max-height: 250px;
   max-width: 480px;
-  height: auto;
+  width: 100%;
 }
 /* line 19, ../sass/sistemas-ssfi.scss */
 article .sist-solares p {
+  font-size: 16px;
   margin-top: 1em;
   text-align: center;
-  font-size: 16px;
 }
 /* line 24, ../sass/sistemas-ssfi.scss */
 article .sist-solares span {
-  font-style: italic;
   font-size: 16px;
+  font-style: italic;
 }
 
 /* line 31, ../sass/sistemas-ssfi.scss */
@@ -33,63 +33,72 @@ article .sist-solares span {
 
 /* line 40, ../sass/sistemas-ssfi.scss */
 .ssfi h1 {
-  text-align: center;
   font-size: 1.5em;
+  text-align: center;
 }
 /* line 44, ../sass/sistemas-ssfi.scss */
 .ssfi #linea {
   border-bottom: 1px solid #7ac043;
-  width: 50%;
-  margin: 0 auto;
   margin-bottom: 10px;
+  margin: 0 auto;
+  width: 50%;
 }
 
-/* line 53, ../sass/sistemas-ssfi.scss */
-#nav {
-  float: left;
-  width: 280px;
-  border-top: 1px solid #999;
-  border-right: 1px solid #999;
-  border-left: 1px solid #999;
+/* line 52, ../sass/sistemas-ssfi.scss */
+#acordion {
+  background-color: red;
+  border-radius: 5px;
+  margin: 40px auto;
+  max-width: 700px;
+  min-height: 50px;
+  overflow: hidden;
+  width: 100%;
+}
+/* line 61, ../sass/sistemas-ssfi.scss */
+#acordion .titulo {
+  background-color: #7ac043;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  height: 50px;
+  max-width: 700px;
+  overflow: hidden;
+  width: 100%;
+}
+/* line 72, ../sass/sistemas-ssfi.scss */
+#acordion p.titulo {
+  color: white;
+  margin: 1px;
+  width: 100%;
+}
+/* line 78, ../sass/sistemas-ssfi.scss */
+#acordion div.info {
+  -webkit-transition: height 0.2s;
+  background-color: #f5f5f5;
+  height: 0px;
+  max-width: 700px;
+  overflow: hidden;
+  width: 100%;
+}
+/* line 87, ../sass/sistemas-ssfi.scss */
+#acordion p.info {
+  color: #4f4f4f;
+  margin: 0;
+  padding: 1em;
+}
+/* line 93, ../sass/sistemas-ssfi.scss */
+#acordion div.subapartado:hover div.info {
+  height: 180px;
 }
 
-/* line 60, ../sass/sistemas-ssfi.scss */
-#nav li a {
-  display: block;
-  padding: 10px 15px;
-  background: #ccc;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
-  text-decoration: none;
-  color: #000;
-}
-
-/* line 69, ../sass/sistemas-ssfi.scss */
-nav li a:hover, #nav li a.active {
-  background: #999;
-  color: #fff;
-}
-
-/* line 73, ../sass/sistemas-ssfi.scss */
-nav li ul {
-  display: none;
-}
-
-/* line 76, ../sass/sistemas-ssfi.scss */
-#nav li ul li a {
-  padding: 10px 25px;
-  background: #ececec;
-  border-bottom: 1px dotted #ccc;
-}
-
-/* line 86, ../sass/sistemas-ssfi.scss */
+/* line 101, ../sass/sistemas-ssfi.scss */
 .container #enphase {
   background: url("../img/enphase.png");
   background-size: 100%;
   width: 124px;
   height: 65px;
+  margin: 0;
+  padding: 0;
 }
-/* line 91, ../sass/sistemas-ssfi.scss */
+/* line 108, ../sass/sistemas-ssfi.scss */
 .container #enphase:hover {
   background: url("../img/enphase-hover.png");
   background-size: 100%;
@@ -97,14 +106,14 @@ nav li ul {
   height: 65px;
   cursor: pointer;
 }
-/* line 99, ../sass/sistemas-ssfi.scss */
+/* line 116, ../sass/sistemas-ssfi.scss */
 .container #yingli {
   background: url("../img/yingli.png");
   background-size: 100%;
   width: 121px;
   height: 72px;
 }
-/* line 104, ../sass/sistemas-ssfi.scss */
+/* line 121, ../sass/sistemas-ssfi.scss */
 .container #yingli:hover {
   background: url("../img/yingli-hover.png");
   background-size: 100%;
@@ -112,14 +121,14 @@ nav li ul {
   height: 72px;
   cursor: pointer;
 }
-/* line 112, ../sass/sistemas-ssfi.scss */
+/* line 129, ../sass/sistemas-ssfi.scss */
 .container #fronius {
   background: url("../img/fronius.png");
   background-size: 100%;
   width: 121px;
   height: 72px;
 }
-/* line 117, ../sass/sistemas-ssfi.scss */
+/* line 134, ../sass/sistemas-ssfi.scss */
 .container #fronius:hover {
   background: url("../img/fronius-hover.png");
   background-size: 100%;
@@ -127,14 +136,14 @@ nav li ul {
   height: 72px;
   cursor: pointer;
 }
-/* line 125, ../sass/sistemas-ssfi.scss */
+/* line 142, ../sass/sistemas-ssfi.scss */
 .container #solar-world {
   background: url("../img/solarworld.png");
   background-size: 100%;
   width: 121px;
   height: 72px;
 }
-/* line 130, ../sass/sistemas-ssfi.scss */
+/* line 147, ../sass/sistemas-ssfi.scss */
 .container #solar-world:hover {
   background: url("../img/solarworld-hover.png");
   background-size: 100%;
@@ -142,14 +151,14 @@ nav li ul {
   height: 72px;
   cursor: pointer;
 }
-/* line 138, ../sass/sistemas-ssfi.scss */
+/* line 155, ../sass/sistemas-ssfi.scss */
 .container #jinko {
   background: url("../img/jinko.png");
   background-size: 100%;
   width: 121px;
   height: 72px;
 }
-/* line 143, ../sass/sistemas-ssfi.scss */
+/* line 160, ../sass/sistemas-ssfi.scss */
 .container #jinko:hover {
   background: url("../img/jinko-hover.png");
   background-size: 100%;
@@ -157,14 +166,14 @@ nav li ul {
   height: 72px;
   cursor: pointer;
 }
-/* line 151, ../sass/sistemas-ssfi.scss */
+/* line 168, ../sass/sistemas-ssfi.scss */
 .container #solartec {
   background: url("../img/solartec.png");
   background-size: 100%;
   width: 121px;
   height: 72px;
 }
-/* line 156, ../sass/sistemas-ssfi.scss */
+/* line 173, ../sass/sistemas-ssfi.scss */
 .container #solartec:hover {
   background: url("../img/solartec-hover.png");
   background-size: 100%;
@@ -173,69 +182,69 @@ nav li ul {
   cursor: pointer;
 }
 
-/* line 166, ../sass/sistemas-ssfi.scss */
+/* line 183, ../sass/sistemas-ssfi.scss */
 .proveedores {
   text-align: center;
 }
-/* line 168, ../sass/sistemas-ssfi.scss */
+/* line 185, ../sass/sistemas-ssfi.scss */
 .proveedores h3 {
   text-align: center;
   font-size: 18px;
 }
-/* line 172, ../sass/sistemas-ssfi.scss */
+/* line 189, ../sass/sistemas-ssfi.scss */
 .proveedores #linea2 {
   margin: 0 auto;
   border: 1px solid black;
   width: 15%;
 }
-/* line 177, ../sass/sistemas-ssfi.scss */
+/* line 194, ../sass/sistemas-ssfi.scss */
 .proveedores ul {
   margin: 30px;
   padding: 0;
 }
-/* line 180, ../sass/sistemas-ssfi.scss */
+/* line 197, ../sass/sistemas-ssfi.scss */
 .proveedores ul li {
   display: inline-block;
   vertical-align: top;
 }
 
-/* line 186, ../sass/sistemas-ssfi.scss */
+/* line 203, ../sass/sistemas-ssfi.scss */
 .center-block {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 191, ../sass/sistemas-ssfi.scss */
+/* line 208, ../sass/sistemas-ssfi.scss */
 .financiamiento {
   text-align: center;
 }
-/* line 193, ../sass/sistemas-ssfi.scss */
+/* line 210, ../sass/sistemas-ssfi.scss */
 .financiamiento h3 {
   text-align: center;
 }
-/* line 196, ../sass/sistemas-ssfi.scss */
+/* line 213, ../sass/sistemas-ssfi.scss */
 .financiamiento #linea2 {
   margin: 0 auto;
   border: 1px solid black;
   width: 15%;
   margin-bottom: 10px;
 }
-/* line 202, ../sass/sistemas-ssfi.scss */
+/* line 219, ../sass/sistemas-ssfi.scss */
 .financiamiento ul {
   margin: 30px;
   padding: 0;
 }
-/* line 205, ../sass/sistemas-ssfi.scss */
+/* line 222, ../sass/sistemas-ssfi.scss */
 .financiamiento ul li {
   display: inline-block;
   vertical-align: bottom;
 }
-/* line 210, ../sass/sistemas-ssfi.scss */
+/* line 227, ../sass/sistemas-ssfi.scss */
 .financiamiento p {
   text-align: center;
 }
-/* line 213, ../sass/sistemas-ssfi.scss */
+/* line 230, ../sass/sistemas-ssfi.scss */
 .financiamiento #cibanco {
   background: url("../img/cibanco.png");
   background-size: 100%;
@@ -243,7 +252,7 @@ nav li ul {
   width: 124px;
   height: 70px;
 }
-/* line 220, ../sass/sistemas-ssfi.scss */
+/* line 237, ../sass/sistemas-ssfi.scss */
 .financiamiento #nacional-financiera {
   background: url("../img/n-f.jpg");
   background-size: 100%;
@@ -251,7 +260,7 @@ nav li ul {
   width: 124px;
   height: 70px;
 }
-/* line 227, ../sass/sistemas-ssfi.scss */
+/* line 244, ../sass/sistemas-ssfi.scss */
 .financiamiento #banbajio {
   background: url("../img/banbajio.jpg");
   background-size: 100%;
@@ -259,7 +268,7 @@ nav li ul {
   width: 124px;
   height: 70px;
 }
-/* line 234, ../sass/sistemas-ssfi.scss */
+/* line 251, ../sass/sistemas-ssfi.scss */
 .financiamiento #imter-financiamiento {
   background: url("../img/imter-financia.png");
   background-size: 100%;
@@ -269,24 +278,24 @@ nav li ul {
 }
 
 @media screen and (min-width: 768px) {
-  /* line 245, ../sass/sistemas-ssfi.scss */
+  /* line 262, ../sass/sistemas-ssfi.scss */
   .ssfi h1 {
     margin-top: 180px;
     text-align: left;
   }
-  /* line 249, ../sass/sistemas-ssfi.scss */
+  /* line 266, ../sass/sistemas-ssfi.scss */
   .ssfi #linea {
     border-bottom: 2px solid #7ac043;
     width: 30%;
   }
 
-  /* line 256, ../sass/sistemas-ssfi.scss */
+  /* line 273, ../sass/sistemas-ssfi.scss */
   article .sist-solares {
     text-align: right;
   }
 }
 @media screen and (min-width: 1200px) {
-  /* line 265, ../sass/sistemas-ssfi.scss */
+  /* line 282, ../sass/sistemas-ssfi.scss */
   #bg {
     background-image: url("../img/bgimter.png");
     width: 100%;
@@ -296,11 +305,11 @@ nav li ul {
     height: auto;
   }
 
-  /* line 274, ../sass/sistemas-ssfi.scss */
+  /* line 291, ../sass/sistemas-ssfi.scss */
   .ssfi h1 {
     margin-top: 200px;
   }
-  /* line 277, ../sass/sistemas-ssfi.scss */
+  /* line 294, ../sass/sistemas-ssfi.scss */
   .ssfi #linea {
     border-bottom: 2px solid #7ac043;
     width: 30%;
