--- a/sass/portafolio.scss
+++ b/sass/portafolio.scss
@@ -4,27 +4,34 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: auto;
+}
   h1{
-  	text-align: center;
-  	font-size: 1.5em;
+    font-size: 1.5em;
+    text-align: center;
+    margin-top: 250px;
+    
   }
-}
-.thumbnail{
-  padding: 0;
-  margin-bottom: 0;
-}
+  #linea2{
+    border-bottom: 1px solid black;
+    width: 30%;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
 .thumbnails{
-  list-style-type: none;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  width: 50%;
-  max-width: 250px;
-}
-
-@media screen and (min-width: 768px) {
-  .portafolio{
-    h1{
-      margin-top: 200px;
+  text-align: center;
+  width: 80%;
+    .span3 {
+      display: inline-block;
     }
-  }
+    .thumbnail{
+      border: none;
+      display: inline;
+      padding: 0;
+    }
+  
+}
+#lightbox img {
+    width: 100%;
 }
