--- a/sass/sistemas-ssfi.scss
+++ b/sass/sistemas-ssfi.scss
@@ -10,20 +10,20 @@ article{
 		text-align: center;
 		figure{
 			img{
-				width: 100%;
+				height: auto;
 				max-height: 250px;
 				max-width: 480px;
-				height: auto;
+				width: 100%;
 			}
 		}
 		p{
+			font-size: 16px;
 			margin-top: 1em;
 			text-align: center;
-			font-size: 16px;
 		}
 		span{
-			font-style: italic;
 			font-size: 16px;
+			font-style: italic;
 		}
 	}
 }
@@ -38,56 +38,73 @@ article{
 }
 .ssfi{
 	 h1{
-  	text-align: center;
   	font-size: 1.5em;
+  	text-align: center;
   }
   #linea{
 			border-bottom: 1px solid $verde-claro;
-			width: 50%;
-			margin: 0 auto;
 			margin-bottom: 10px;
+			margin: 0 auto;
+			width: 50%;
 		}
 }
 
+#acordion{
+	background-color: red;
+	border-radius: 5px;
+	margin:40px auto;
+	max-width: 700px;
+	min-height:50px;
+	overflow: hidden;
+	width:100%;
 
-#nav{
-	float: left;
-	width: 280px;
-	border-top: 1px solid #999;
-	border-right: 1px solid #999;
-	border-left: 1px solid #999;
-}
-#nav li a{
-	display: block;
-	padding: 10px 15px;
-	background: #ccc;
-	border-top: 1px solid #eee;
-	border-bottom: 1px solid #eee;
-	text-decoration: none;
-	color: #000;
-}
-nav li a:hover, #nav li a.active{
-	background: #999;
-	color: #fff;
-}
-nav li ul{
-	display: none;
-}
-#nav li ul li a{
-	padding: 10px 25px;
-	background: #ececec;
-	border-bottom: 1px dotted #ccc;
-}
+	.titulo{
+		background-color: $verde-claro;
+		border-bottom: 1px solid rgba(0,0,0,0.1);
+		height:50px;
+		max-width: 700px;
+		overflow: hidden;
+		width:100%;
+	}
+    
 
 
+	p.titulo{
+		color: white;
+		margin:1px;
+		width: 100%;
+	}
+
+	div.info{
+		-webkit-transition: height 0.2s;
+		background-color: #f5f5f5;
+		height:0px;
+		max-width: 700px;
+		overflow: hidden;
+		width:100%;
+	}
+
+	p.info{
+		color:#4f4f4f;
+		margin:0;
+		padding: 1em;
+	}
+
+div.subapartado:hover div.info{
+	height:180px;
+	}
+}
 
 
 .container{
+
 	#enphase{
 		background: url("../img/enphase.png");
 		background-size: 100%;
 		width: 124px;
 		height: 65px;
+		margin: 0;
+	padding: 0;
 		&:hover{
 			background: url("../img/enphase-hover.png");
 			background-size: 100%;
